--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Luke Whitesides
+subtitle: I am a technology innovator interested in accelerating the deployment of renewable energy and other climate forward solutions. 
 ---
